# parsing-eveluater

./: .gitignore  README.md  main.py  pdf_paring.py  pdf_parsing_pipeline.py  pyproject.toml  test_api_parse_endpoint.py  test_pdf_parsing_pipeline.py
src/: __init__.py  pdf_parsing_pipeline.py
src/api/: main.py
